fix responsive alignment, not working as wanted

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -146,7 +146,7 @@
     .home_img {
         width: 250px;
         height: 250px;
-        box-shadow: inset 0 0 0 8px rgb(255, 255, 255 / 30%);
+        box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
     }
 
     .home_scroll {
@@ -168,12 +168,13 @@
         justify-self: initial;
     }
 
+    /* container not responsive...tbd*/
     .home_data {
         grid-column: 1/3;
     }
 
     .home_img {
-        box-shadow: inset 0 0 0 6px rgb(255, 255, 255 / 30%);
+        box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
         width: 200px;
         height: 200px;
     }
